Assertion failure: focusedWindow (BrowsingContext should always have a window here.) when session-restoring on a debug build
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P2)
Tracking
()
People
(Reporter: emilio, Assigned: hsivonen)
References
Details
(Keywords: crash, regression, topcrash)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr78+
|
Details | Review |
Just session-restoring, switching focused windows with Alt+Tab back to my terminal, then switching back to firefox and pressing Enter to restore the session.
| Reporter | ||
Comment 1•5 years ago
|
||
https://pernos.co/debug/4hvguMmzHQ9ClucfTwEjRg/index.html is a pernosco session with this assert hit locally.
Comment 2•5 years ago
|
||
This looks very similar to bug 1653904, though here we assert at least.
| Reporter | ||
Comment 3•5 years ago
|
||
Yeah, this is basically the debug-build version of the crash in bug 1653904.
| Assignee | ||
Comment 4•5 years ago
|
||
| Assignee | ||
Comment 5•5 years ago
|
||
| Assignee | ||
Comment 8•5 years ago
|
||
Yes, it looks like a duplicate of this one.
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 10•5 years ago
|
||
| bugherder | ||
Comment 11•5 years ago
|
||
Please request beta uplift when you get a chance.
| Assignee | ||
Comment 12•5 years ago
|
||
Comment on attachment 9167669 [details]
Bug 1656858 - Obtain principals differently in the parent process in SetFocusInner().
Beta/Release Uplift Approval Request
- User impact if declined: Causes some crashes, presumably especially at session restore time. (Verified in Nightly in the sense of crash reports stopping, not by manual testing.)
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Should be low risk, because this performs the same operation on principals as before but merely obtains them in a different way in the parent process.
- String changes made/needed: None
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Causes some crashes. Not sure when, considering that crashes seemed to increase in 80 presumably due to other code changed to trigger this more often.
- User impact if declined: Crashes.
- Fix Landed on Version: 81
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Should be low risk, because this performs the same operation on principals as before but merely obtains them in a different way in the parent process.
- String or UUID changes made by this patch: None
| Assignee | ||
Updated•5 years ago
|
Comment 13•5 years ago
|
||
Comment on attachment 9167669 [details]
Bug 1656858 - Obtain principals differently in the parent process in SetFocusInner().
topcrash fix, approved for 80.0b5
Comment 14•5 years ago
|
||
| bugherder uplift | ||
Comment 16•5 years ago
|
||
Comment on attachment 9167669 [details]
Bug 1656858 - Obtain principals differently in the parent process in SetFocusInner().
Approved for 78.2esr.
Comment 17•5 years ago
|
||
| bugherder uplift | ||
Description
•