Bug 1656858 - Obtain principals differently in the parent process in SetFocusInner(). r=farre, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D85747